--- a/index.html
+++ b/index.html
@@ -4,15 +4,51 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="css/styles.css">
+
   </head>
   <body>
+
+    <!-- NAV -->
+    <nav class="container navbar navbar-expand-md navbar-light">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+       <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="nav-elements collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav text-center ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">¿Quiénes somos?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Productos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Ofertas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
     <section class="bg-primary text-light text-center py-5">
         <img width="48" height="48" src="https://img.icons8.com/fluency/48/fish-food.png" alt="fish-food"/>
         <h1>Pescaderia Don Jose</h1>
         <h4 px-3>&bull; Tu tienda online &bull;</h4>
     </section>
+
     <section class="my-3">
       <div class="container">
         <div class="row">
@@ -24,6 +60,7 @@
         </div>
       </div>
     </section>
+
     <section>
       <div class="container my-3">
         <div class="row">
@@ -93,7 +130,6 @@
         </div>
       </div>
  
-      
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
