--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <link rel="stylesheet" href="css/styles.css">
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
   </head>
   <body>
 
@@ -44,7 +46,7 @@
     </nav>
 
     <section class="bg-primary text-light text-center py-5">
-        <img width="48" height="48" src="https://img.icons8.com/fluency/48/fish-food.png" alt="fish-food"/>
+        <img width="48" height="48" src="https://img.icons8.com/fluency/48/fish-food.png" data-aos="zoom-in" alt="fish-food"/>
         <h1>Pescaderia Don Jose</h1>
         <h4 px-3>&bull; Tu tienda online &bull;</h4>
     </section>
@@ -133,5 +135,9 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
